# UKElectionFacebookAdIndex

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  buildDeps.sh  getFBAds.js  refreshIndex.bash  refreshReport.bash  refreshTimeSeries.bash  report.cfg  resultNight.cfg  sample.json  timeSeries.cfg
FrontEnd/: Consituency.html  Other and Alto.json  Summary.json  Woking.json  adDetails.js
docs/FrontEnd/: FacebookBreakdown.html  FinalPush.html  SpendBreakdown.html  TimeSeriesView.html  adDetails.js  breakdown.js  finalNight.js  timeSeries.js
docs/FrontEnd/data/Cons/: Aberavon.json  Aberconwy.json  Aberdeen North.json  Aberdeen South.json  Airdrie and Shotts.json  Aldershot.json  Aldridge-Brownhills.json  Altrincham and Sale West.json  Alyn and Deeside.json  Amber Valley.json  Angus.json  Arfon.json  Argyll and Bute.json  Arundel and South Downs.json  Ashfield.json  Ashford.json  Ashton-under-Lyne.json  Aylesbury.json  Ayr, Carrick and Cumnock.json  Banbury.json  Banff and Buchan.json  Barking.json  Barnsley Central.json  Barnsley East.json  Barrow and Furness.json  Basildon and Billericay.json  Basingstoke.json  Bassetlaw.json  Bath.json  Batley and Spen.json  Battersea.json  Beaconsfield.json  Beckenham.json  Bedford.json  Belfast East.json  Belfast North.json  Belfast South.json  Belfast West.json  Bermondsey and Old Southwark.json  Berwick-upon-Tweed.json  (+603 more)
docs/FrontEnd/data/Issues/: Brexit.json  Climate Crisis.json  Criminal Justice.json  Economy & Taxes.json  Education.json  NHS.json  Summary.json
docs/FrontEnd/data/TimeSeries/: Cons.json  Issues.json
include/: AdDb.h  FacebookAd.h  FacebookAdKey.h  FacebookAdStore.h  FacebookParser.h  Index.h  Index.hpp  IndexConfig.h  Reports.h
internal_includes/: ConfigParser.h  ConfigPurify.h  DbJSON.h  DbUtils.h  FacebookAdJSON.h  IndexJSON.h  ReportAdsJSON.h  StoreJSON.h  StoredItemJSON.h  StringSearch.h  SummmaryJSON.h  TimeSeriesConfigJSON.h  test_BreakdownParser.h  test_utils.h
js/: getFBAds.js  package.json
src/: AdDb.cpp  ConfigPurify.cpp  DbUtils.cpp  ExtractIdDates.cpp  FacebookAd.cpp  FacebookAdKey.cpp  FacebookAdStore.cpp  FacebookParser.cpp  IndexConfig.cpp  Reports.cpp  cfgClean.cpp  finalNight.cpp  generateTimeSeries.cpp  processAds.cpp  reindex.cpp
test/: ad_parser.cpp  dbTests.cpp  index.cpp  store.cpp  stringSearchUtils.cpp  testPurify.cpp  testReports.cpp
test/data/: woking.json
test/data/cfg/: dictionary.cfg  invalid.json  testWoking.json  woking.json  woking_beeston.json
test/data/full_day_run/: FacebookAds_2019113T112323_1  FacebookAds_2019113T112323_2
test/data/test_run/: FacebookAds_2019113T105126_1  FacebookAds_2019113T105126_2
utils/: makeResults.awk  verifyCfg.awk
utils/PlaceData/: extractLocations.sh  groupIntoCon.awk
utils/candidates/: conParser.awk  getCandidates.sh
